syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "v1/deployment_service.proto";
import "v1/image_service.proto";

package v1;

message Container {
    string id    = 1;
    string name  = 2;
    Image  image = 3;
}

enum ResourceAction {
    UNSET_ACTION_RESOURCE = 0;
    CREATE_RESOURCE       = 1;
    REMOVE_RESOURCE       = 2;
    UPDATE_RESOURCE       = 3;
}

message DeploymentEvent {
    Deployment     deployment = 1;
    ResourceAction action     = 2;
    string         cluster_id = 3;
}

service AgentEventService {
    rpc ReportDeploymentEvent(DeploymentEvent) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/agent/events/deployment"
            body: "*"
        };
    }
}
